--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -18,4 +18,7 @@ nav {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  border-top: 1px solid rgba(0,0,0,1);
+  padding-top: 0.5rem;
+  padding-bottom: 1rem;
 }
