--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,7 @@ h1 {
 
 h2, h3 {
   color: #444;
-  font-family: Georiga, "Times New Roman", Serif;
+  font-family: Georiga, "Times New Roman", serif;
   font-weight: lighter;
 }
 
