--- a/src/app/upload-form/upload-form.component.css
+++ b/src/app/upload-form/upload-form.component.css
@@ -1,5 +1,7 @@
 .file-upload {
+
   padding: 0.875rem 4rem;
+  width: 100%;
   font-size: 1rem;
   font-family: freight-text-pro;
   text-transform: uppercase;
@@ -7,7 +9,7 @@
   border: 1px solid black;
   border-radius: 10rem;
   background: rgba(0,0,0,0);
-  transition-property: color, border-color, letter-spacing;
+  transition-property: color, border-color;
   transition-duration: 250ms;
   transition-timing-function: ease-in;
 ;
@@ -16,10 +18,11 @@
 .file-upload:hover {
   border-color: rgba(255,0,0,1);
   color: rgba(255,0,0,1);
-  letter-spacing: 0.250rem;
 }
-
 .form {
   display: flex;
-  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
 }
+
