Response und MesssagService implementiert

--- a/src/app/upload-form/upload-form.component.html
+++ b/src/app/upload-form/upload-form.component.html
@@ -26,4 +26,11 @@
     Reset
   </button>
 
+  <p *ngIf="message">{{message}}</p>
+
+</div>
+<div>
+  <ol>
+    <li *ngFor='let message of messageService.messages'> {{message}} </li>
+  </ol>
 </div>
