hitting enter in the value input field also creates new input fields

--- a/src/app/text-form/text-form.component.html
+++ b/src/app/text-form/text-form.component.html
@@ -10,7 +10,7 @@
         <label for="key">key</label>
         <input id="key" type="text" formControlName="key" placeholder="key">
         <label for="value">value</label>
-        <input id="value" type="text" formControlName="value" placeholder="value">
+        <input id="value" type="text" formControlName="value" placeholder="value" (keyup.enter)="addKeyValuePair()">
       </div>
     </div>
   </div>
