--- a/src/app/upload-form/upload-form.component.html
+++ b/src/app/upload-form/upload-form.component.html
@@ -7,21 +7,21 @@
          hidden>
 
   <button
-    class="file-upload"
+    class="button-default"
     (click)="fileInput.click()">
     Select File
   </button>
 
   <button
     type="submit"
-    class="file-upload"
+    class="button-default button-submit"
     (click)="onSubmit()">
     Submit
   </button>
 
   <button
     type="submit"
-    class="file-upload"
+    class="button-default button-reset"
     (click)="onReset()">
     Reset
   </button>
