--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -22,3 +22,55 @@ nav {
   padding-top: 0.5rem;
   padding-bottom: 1rem;
 }
+
+.button-default {
+  margin: 0.25rem 0;
+  padding: 0.875rem 4rem;
+  width: 100%;
+  font-size: 1rem;
+  font-family: freight-text-pro;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 0.125rem;
+  border: 1px solid black;
+  border-radius: 10rem;
+  background: rgba(0,0,0,1);
+  color: rgba(255,255,255,1);
+  transition-property: color, border-color, background-color;
+  transition-duration: 250ms;
+  transition-timing-function: ease-in;
+}
+
+.button-default:hover {
+  border-color: rgba(0,0,0,1);
+  color: rgba(0,0,0,1);
+  background-color: rgba(0,0,0,0);
+}
+
+.button-submit {
+  background-color: #C4E2AF;
+  border-color: #C4E2AF;
+}
+
+.button-submit:hover {
+  background-color: rgba(0,0,0,0);
+  color: #C4E2AF;
+  border-color: #C4E2AF;
+}
+
+.button-reset {
+  border-color: #FCB6B0;
+  background-color: #FCB6B0;
+}
+
+.button-reset:hover {
+  background-color: rgba(0,0,0,0);
+  color: #FCB6B0;
+  border-color: #FCB6B0;
+}
+.form {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+
+}
