--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,9 +9,15 @@ h1 {
 }
 
 .container {
-  width: 60%;
+  width: 70%;
   margin-left: auto;
   margin-right: auto;
+}
+
+@media (min-width: 1000px) {
+  .container {
+    width: 50%;
+  }
 }
 
 nav {
