--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,12 +9,18 @@ h1 {
 }
 
 .container {
-  width: 70%;
+  width: 80%;
   margin-left: auto;
   margin-right: auto;
 }
 
 @media (min-width: 1000px) {
+  .container {
+    width: 65%;
+  }
+}
+
+@media (min-width: 1200px) {
   .container {
     width: 50%;
   }
