websocket funktioniert mit insomnia als trigger

--- a/src/app/upload-form/upload-form.component.html
+++ b/src/app/upload-form/upload-form.component.html
@@ -26,6 +26,8 @@
     Reset
   </button>
 
-  <p *ngIf="jsonResponse">{{jsonResponse.message}}</p>
+  <p *ngIf="jsonResponse">{{jsonResponse.clientId}}</p>
+
+  <p *ngIf="stringResponse">{{stringResponse}}</p>
 
 </div>
