--- a/src/app/text-form/text-form.component.html
+++ b/src/app/text-form/text-form.component.html
@@ -14,7 +14,14 @@
     <button class="button-default button-submit" type="button" (click)="onSubmit()">Submit</button>
     <button class="button-default button-reset" type="button" (click)="onReset()">Reset</button>
 
-    <p *ngIf="jsonResponse">{{jsonResponse.message}}</p>
+    <div *ngIf="jsonResponse">
+      <h2>HTTP Response</h2>
+      <p>Status: <span class="italic"> {{jsonResponse.status}}</span></p>
+      <p>Client ID:<span class="italic"> {{jsonResponse.clientId}}</span></p>
+      <p>Message:<span class="italic"> {{jsonResponse.message}}</span></p>
+    </div>
+
+    <p *ngIf="stringResponse">{{stringResponse}}</p>
 
   </div>
 </form>
